Fixing Contributions notvisible

--- a/Section 5 Web Design Rules/style.css
+++ b/Section 5 Web Design Rules/style.css
@@ -55,7 +55,7 @@ h2 {
   text-transform: uppercase;
   display: inline-block;
   font-weight: 500;
-  /* border-radius: 10px; */
+  border-radius: 100px;
 }
 .btn:hover,
 .btn:active {
